Added crappy code for uploading workouts to Strava

--- a/credentials-example.cfg
+++ b/credentials-example.cfg
@@ -4,3 +4,10 @@ PASSWORD = <YOUR_PASSWORD>
 
 [Google]
 API_KEY = <YOUR_GOOGLE_API_KEY>
+
+[Strava]
+READ_ACCESS_TOKEN = <READ_ACCESS_TOKEN>
+CLIENT_ID = <CLIENT_ID>
+CLIENT_SECRET = <CLIENT_SECRET>
+AUTHORIZATION_CODE = <AUTHORIZATION_CODE>
+WRITE_ACCESS_TOKEN = <WRITE_ACCESS_TOKEN>
